<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/new_trip_layout"
	android:orientation="vertical"
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
	android:padding="10dp">
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/new_trip_dialog_text"
		android:textColor="#FFF" />	
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:padding="10dp">		
		<EditText android:id="@+id/file_name"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:scrollHorizontally="true"
			android:hint="@string/file_name_hint"
			android:width="200sp"
			android:maxLines="1"
			android:gravity="center_vertical">
		</EditText>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:textColor="#FFF" 
			android:text="@string/file_suffix"/>
	</LinearLayout>
	<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content">			
			<Button 
				android:id="@+id/cancel_button"
				android:text="@string/cancel"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center">
			</Button>	
				<Button 
			    android:id="@+id/new_button"
				android:text="@string/OK"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center">
			</Button>	
					
			</LinearLayout>	
</LinearLayout>
