<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RadioGroup
        android:id="@+id/option_trip"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <!--  Start off the view to create a widget that launches with selected trip. -->
 
        <RadioButton
            android:id="@+id/option_last_opened"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/widget_last_opened_trip_option"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:onClick="onTripOptionClicked"
            android:paddingBottom="18dp"
            android:checked="false" />
 
        <RadioButton
            android:id="@+id/option_selected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onTripOptionClicked"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:checked="true" 
            android:text="@string/widget_selected_trip_option" />
 
    </RadioGroup>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:paddingBottom="18sp"
        android:paddingTop="18sp"
        android:background="@drawable/divider_color"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <Button
            android:id="@+id/open_trip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_menu_archive"
            android:drawablePadding="8dp"
            android:onClick="onOpenTripClicked"
            android:paddingTop="8dp"
            android:enabled="true"
            android:text="@string/widget_open_trip" />

        <Button
            android:id="@+id/new_trip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_menu_add"
            android:drawablePadding="8dp"
            android:onClick="onNewTripClicked"
            android:paddingTop="8dp"
            android:enabled="true"
            android:text="@string/widget_new_trip" />

    </LinearLayout>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:paddingBottom="18sp"
        android:paddingTop="28sp"
        android:background="@drawable/divider_color"/>
    
    <!-- the text of this done button changes to show file name chosen -->
    <Button
        android:id="@+id/use_trip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:drawableLeft="@drawable/ic_action_done"
        android:onClick="onDoneClicked" />

</LinearLayout>
