<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:fillViewport="true" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/button_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp" >

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="onSaveOrCancel"
                android:text="@string/cancel" >
            </Button>

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="onSaveOrCancel"
                android:text="@string/save" >
            </Button>
        </LinearLayout>

        <EditText
            android:id="@+id/edit_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note_title_hint"
            android:textStyle="bold"
            android:inputType="text|textCapWords|textMultiLine"
            android:minLines="2" >
        </EditText>

        <EditText
            android:id="@+id/edit_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note_desc_hint"
            android:gravity="top"
            android:inputType="text|textCapSentences|textMultiLine"
            android:minLines="5" >
        </EditText>

        <!--   android:lines="2" used below to avoid what seems like an
        Android bug. On a Nexus 4.3, Edit Post screen in landscape view never scrolls
        and cuts off the location if :lines is left out. New Post scrolls fine, Edit Post
        doesn't. Putting in lines=2 shows scroll bar for both, when needed in landscape.  -->  
        <TextView
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/list_selector_background"
            android:clickable="true"
            android:drawableLeft="@drawable/marker_red_circle"
            android:drawablePadding="12dp"
            android:gravity="left|center_vertical"
            android:lines="2" 
            android:onClick="editLocation"
            android:paddingBottom="12sp"
            android:paddingLeft="16sp"
            android:paddingRight="6sp"
            android:paddingTop="12sp"
            android:textSize="16sp" >
        </TextView>
        
        <View
	         android:layout_width="fill_parent"
	         android:layout_height="2dip"
	         android:background="#FF909090" />	  
        
    </LinearLayout>

</ScrollView>
